<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetallesActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideH70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/item_producto_precio"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comprar"
        android:textColor="@color/black"
        app:icon="@drawable/ic_baseline_shopping_cart_24"
        app:iconGravity="textStart"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideH70"
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuarioEmail"
        app:layout_constraintVertical_bias="0.723" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginBottom="48dp"
        android:background="@color/fondo"
        app:layout_constraintBottom_toTopOf="@+id/usuarioNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/item_producto_id"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginTop="70dp"
        app:layout_constraintBottom_toTopOf="@+id/item_producto_marca"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideH70"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_producto_marca"
        android:layout_width="100dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toTopOf="@+id/item_producto_modelo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/guideH70"
        app:layout_constraintTop_toBottomOf="@+id/item_producto_id" />

    <TextView
        android:id="@+id/item_producto_modelo"
        android:layout_width="100dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toTopOf="@+id/item_producto_potencia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/guideH70"
        app:layout_constraintTop_toBottomOf="@+id/item_producto_marca" />

    <TextView
        android:id="@+id/item_producto_potencia"
        android:layout_width="100dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toTopOf="@+id/item_producto_pixeles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/guideH70"
        app:layout_constraintTop_toBottomOf="@+id/item_producto_modelo" />

    <TextView
        android:id="@+id/item_producto_pixeles"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideH70"
        app:layout_constraintTop_toBottomOf="@+id/item_producto_potencia"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="224dp"
        android:layout_height="162dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toStartOf="@+id/guideH70"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.818"
        app:srcCompat="@drawable/tienda" />

    <EditText
        android:id="@+id/usuarioNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nombre"
        app:layout_constraintBottom_toBottomOf="@+id/usuarioDomicilio"
        app:layout_constraintEnd_toStartOf="@+id/guideH70"
        app:layout_constraintHorizontal_bias="0.621"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <EditText
        android:id="@+id/usuarioDomicilio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:text="@string/domicilio"
        app:layout_constraintBottom_toBottomOf="@+id/usuarioEmail"
        app:layout_constraintEnd_toStartOf="@+id/guideH70"
        app:layout_constraintHorizontal_bias="0.621"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuarioNombre"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/usuarioEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/correo_electr_nico"
        app:layout_constraintEnd_toStartOf="@+id/guideH70"
        app:layout_constraintHorizontal_bias="0.621"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuarioDomicilio"
        app:layout_constraintVertical_bias="0.20" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelar_compra"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toEndOf="@+id/item_producto_precio"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.916" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Detalles del pedido"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>